--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,7 @@
         </li>
         {% if user.is_authenticated %}
          <li class="nav-item">
-          <a class="nav-link" href="{% url 'posts_archive' %}">Archived</a>
+          <a class="nav-link" href="{% url 'posts_archived' %}">Archived</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="{% url 'posts_draft' %}">Draft</a>
