--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>About Me</h1>
-    <p>This is my second page. I'm new to developing and I am exicted about the almost endless possibilities of web development.</p>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}
+Home
+{% endblock title %}
+{% block css %}
+    <link rel="stylesheet" href="{% static './css/home.css' %}">
+{% endblock css %}
+{% block content %}
+    <h1>Hello, this is my About Me page.</h1>
+    <p>Continue reading to learn more!</p>
+{% endblock content %}
