--- a/templates/posts/list.html
+++ b/templates/posts/list.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}
     Post List
 {% endblock title %}
 
+{% block css %}
+    <link rel="stylesheet" href="{% static './css/home.css' %}">
+{% endblock %}
+
 {% block content %}
-    <h2>{{ paginator }}</h2>
-    <h2>{{ page_obj }}</h2>
-    <h2>{{ is_paginated }}</h2>
-    <h2>{{ object_list }}</h2>
-    <div class="container">
+    <div class="bg-dark text-white container">
         {% for item in post_list %}
-        <div><a href="{% url 'post_detail' item.id %}">{{ item.title }}</a></div>
+        <div class="h3"><a href="{% url 'post_detail' item.id %}">{{ item.title }}</a></div>
         <div>{{ item.subtitle }} </div>
         <div>{{ item.body }} </div>
         <div>{{ item.author }} </div>
